--- a/partials/lesson-1.html
+++ b/partials/lesson-1.html
@@ -45,7 +45,7 @@
             </div>
           </div>
         </div>
-        <iframe ng-show="showMainLesson" ng-if="showMainLesson" src="http://tube.geogebra.org/m/B6VSp8vD" class="ng-hide"></iframe>
+        <iframe ng-show="showMainLesson" ng-if="showMainLesson" src="http://tube.geogebra.org/m/zFKnR6np" class="ng-hide"></iframe>
       </div>
     </div>
   </div>
