updated geometry lesson

--- a/partials/lesson-3.html
+++ b/partials/lesson-3.html
@@ -49,7 +49,7 @@
             </div>
           </div>
         </div>
-        <iframe ng-show="showMainLesson" ng-if="showMainLesson" src="http://tube.geogebra.org/m/wUAal5Bq" class="ng-hide"></iframe>
+        <iframe ng-show="showMainLesson" ng-if="showMainLesson" src="http://tube.geogebra.org/m/pOJNaKHw" class="ng-hide"></iframe>
       </div>
     </div>
   </div>
